--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -2,53 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n",
-      "[19, 20, 21, 25, 28, 22, 26, 27]\n",
-      "<QuerySet [<Gathering: binno together!>, <Gathering: Delicious!>, <Gathering: First gathering>, <Gathering: qfgggfffdfffff>, <Gathering: uhjkkkkkj>, <Gathering: Tesing>, <Gathering: gsjsbjsjs>, <Gathering: gugjjjj>]>\n"
+      "uhjkkkkkj\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<QuerySet [<Gathering: binno together!>, <Gathering: Delicious!>, <Gathering: First gathering>, <Gathering: Tesing>, <Gathering: qfgggfffdfffff>, <Gathering: gsjsbjsjs>, <Gathering: gugjjjj>, <Gathering: uhjkkkkkj>]>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from API.models import *\n",
-    "restaurant=Restaurant.objects.filter(id=5)\n",
-    "reviewsByUser=User.objects.get(id=18)\n",
-    "print(reviewsByUser.id)\n",
-    "#c=RecommendedRate(user_id=1, restaurant_id=1,rating=5)\n",
-    "#c.rating\n",
-    "#reviewsByUser.RecommendedRate\n",
-    "#gAll=gathering.objects.all()\n",
-    "rr=reviewsByUser.recommendedrate_set.all().order_by('-rating')\n",
-    "#posts_lists = map(lambda post: project.post, rr)\n",
-    "#print(posts_lists.values())\n",
-    "mkey=list(rr.values_list('gathering_id',flat=True))\n",
-    "print(mkey)\n",
-    "clauses = ' '.join(['WHEN id=%s THEN %s' % (pk, i) for i, pk in enumerate(mkey)])\n",
-    "ordering = 'CASE %s END' % clauses\n",
-    "queryset = Gathering.objects.filter(pk__in=mkey).extra(\n",
-    "           select={'ordering': ordering}, order_by=('ordering',))\n",
-    "print(queryset)\n",
     "\n",
-    "Gathering.objects.filter(id__in=rr.values('gathering_id'))\n",
-    "#g=Gathering.objects.get(id=27)\n",
-    "#r=g.recommend.get(id=207)\n",
-    "#r.gathering.id"
+    "\n",
+    "g=Gathering.objects.get(id=28)\n",
+    "print(g.name)\n",
+    "g.name='First time to use'\n",
+    "g.details='Feel excited to meet and meal with new friends'\n",
+    "#g.restaurant_id=7\n",
+    "g.save()"
    ]
   },
   {
